--- a/ui/html/partials/nav.tmpl
+++ b/ui/html/partials/nav.tmpl
@@ -5,9 +5,11 @@
         {{if .IsAuthenticated}}
         <a href='/snippet/create'>Create Snippet</a>
         {{end}}
+        <a href='/about'>About</a>
     </div>
     <div>
         {{if .IsAuthenticated}}
+            <a href='/user/account'>Account</a>
             <form action='/user/logout' method='POST'>
                 <input type='hidden' name='csrf_token' value='{{.CSRFToken}}'>
                 <button>Logout</button>
